Added better java and boot